@@ -1,2 +1,2 @@
-60 3000 30 0 Torpedo
+60 3000 30 0 1 Torpedo
 
